<resources>
    <string name="app_name">blog</string>
    <string name="tags">Tags:</string>
    <string name="title_activity_post">ActivityPost</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comments">Comments:</string>
    <string name="authorization_token">Authorization token:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="check_comment">Check comment</string>
    <string name="add_post">Add post</string>
    <string name="post_body">Post body</string>
    <string name="post_title">Post title</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="approved_comment">Visibility On</string>
    <string name="not_approved_comment">Visibility Off</string>
</resources>