<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:id="@+id/post.default_group">

        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/edit"
            app:showAsAction="always" />

    </group>

    <group
        android:id="@+id/post.comment_group"
        android:visible="false"
        tools:visible="true">

        <item
            android:id="@+id/action_approve_comment"
            android:icon="@drawable/ic_baseline_visibility_24"
            android:title="@string/approved_comment"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_disapprove_comment"
            android:icon="@drawable/ic_baseline_visibility_off_24"
            android:title="@string/not_approved_comment"
            app:showAsAction="ifRoom" />

    </group>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>